Formatting & Download All Documents

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,13 +9,13 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/company_logo.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logo3.png" />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="%PUBLIC_URL%/company_logo.png"
+      href="%PUBLIC_URL%/logo3.png"
     />
-    <title>Pijar - Sistem Peminjaman Karyawan Campina</title>
+    <title>SIBABE - Sistem Barang Bekas</title>
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200"
       rel="stylesheet"
